--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   justify-content: center;
   font-size: calc(10px + 0.5vmin);
   color: white;
+  padding: 1rem;
 }
 
 .App-link {
@@ -34,4 +35,45 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+main {
+  background-color: #f6f8fa;
+  max-width: 768px;
+  margin: 3rem auto;
+  padding: 2rem 3rem 3rem;
+}
+
+.card {
+  display: flex;
+  -webkit-box-pack: justify;
+  padding: 2rem;
+  align-items: center;
+  margin: 1rem;
+  text-align: left;
+  color: rgb(88, 96, 105);
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 30px -15px;
+  transition: all 200ms cubic-bezier(0.23, 1, 0.32, 1) 0s;
+}
+
+.card_body,
+.card_header {
+  padding: 0 1rem;
+}
+
+.card_header {
+  height: 50px;
+  width: 50px;
+  align-self: stretch;
+}
+
+.card_body h3 {
+  font-size: 16px;
+}
+
+button {
+  margin: 0.5rem;
+  padding: 0.25rem 0.5rem;
 }
