--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@
   background-color: #282c34;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   font-size: calc(10px + 0.5vmin);
   color: white;
   padding: 1rem;
@@ -59,25 +59,21 @@ main {
   transition: all 200ms cubic-bezier(0.23, 1, 0.32, 1) 0s;
 }
 
-.card_body,
 .card_header {
-}
-
-.card_header {
-  height: 80px;
+  height: 60px;
   width: 100%;
   align-self: stretch;
 }
 
 .card_body h3 {
-  font-size: 24px;
+  font-size: 20px;
   text-align: left;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 button {
   font-size: 16px;
-  margin: 1rem 0.5rem;
+  margin: 0.5rem 0.5rem;
   padding: 0.2rem 0.6rem;
   background-color: #dddddd;
   color: cornflowerblue;
@@ -96,10 +92,20 @@ button:active {
 
 .card_body span {
   font-weight: 600;
-  font-size: 24px;
+  font-size: 20px;
 }
 
 .card_body p {
   display: flex;
   align-items: center;
+}
+
+footer {
+  padding: 3rem;
+}
+
+.btn_add {
+  background-color: #4a8339;
+  color: white;
+  padding: 0.5rem 1rem;
 }
