--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,8 @@ main {
   height: 60px;
   width: 100%;
   align-self: stretch;
+  border: 1px solid #ddd;
+  border-radius: 0.25rem;
 }
 
 .card_body h3 {
