Complete add color form

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,50 @@ footer {
   color: white;
   padding: 0.5rem 1rem;
 }
+
+form {
+  max-width: 768px;
+  text-align: left;
+  padding: 3rem 2rem;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 30px -15px;
+}
+
+label {
+  margin: 0.5rem;
+  display: block;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+input[type="text"] {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+}
+
+input {
+  border-radius: 0.25rem;
+  border: 2px solid cornflowerblue;
+  outline: none;
+  margin: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+input:focus {
+  outline: 2px solid rgb(171, 197, 245);
+}
+
+input[type="color"] {
+  margin: 0 0.5rem 1rem;
+}
+
+form button {
+  margin-top: 0.5rem;
+  padding: 0.6rem 1.2rem;
+  text-transform: capitalize;
+}
+
+footer span {
+  color: cornflowerblue;
+}
