Change add button style

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ footer {
 }
 
 .btn_add {
-  background-color: #4a8339;
+  background-color: cornflowerblue;
   color: white;
   padding: 0.5rem 1rem;
 }
